man: Dokonano zmian w instrukcji i pliku README.md

--- a/man/instrukcja2.tex
+++ b/man/instrukcja2.tex
@@ -25,10 +25,10 @@
 \noindent Gra przeznaczona jest dla 4 graczy. Mogą być nimi również zawarte w grze boty.
 \vspace{10pt}
 
-\includegraphics[scale=0.8]{board.png}
+\includegraphics[scale=0.6]{board.png}
 
 \noindent \textbf{2. Cel gry}\\
-\noindent Celem jest zapisanie się i zaliczenie przedmiotów w czterech zakładach lub doprowadzenie pozostałych graczy do utraty wszystkich punktów.
+\noindent Celem jest zapisanie się i napisanie egzaminów w czterech zakładach lub doprowadzenie pozostałych graczy do utraty wszystkich punktów.
 \vspace{10pt}
 
 %\paragraph*{Rozgrywka}
@@ -55,7 +55,7 @@ Plansza składa się z 36 pól. Wyróżniamy wśród nich:\\
 \indent Po każdym przejściu przez to pole, dostajemy dodatkowe 50 ECTS.\\
 \noindent \textbf{b) zakłady} - jest ich 8.\\
 \indent Każdy zakład składa się z dwóch lub trzech pól przedmiotów, oznaczonych tym samym kolorem.\\
-\noindent \textbf{c) pola przedmiotów} - są 22 takie pola, oznaczone kolorowym paskiem wraz z ceną nabycia.\\ \indent Każde takie pole reprezentuje jeden z wykładanych w instytucie przedmiotów. Można zapisać się na niego poprzez oddanie punktów ECTS w ilości przypisanej do danego pola (oczywiście jeśli gracz ma na to środki). Zapisanie gracza na dany przedmiot jest oznaczane kwadratem w kolorze pionka gracza. Aby zaliczyć dany przedmiot, trzeba napisać z niego odpowiegnio kartkówkę, kolokwium i egzamin - każda taka operacja kosztuje pewną przypisaną ilość ECTS. Prace pisemne można pisać jedynie na przedmiocie, na który gracz jest zapisany. Przedmiot uznaje się za zaliczony, jeśli gracz napisał z niego egzamin. Uwaga - za jednym razem można wykonać tylko jedną z tych czynności. Jeśli gracz stanie na przedmiocie, na który zapisał się już ktoś inny, oddaje tej osobie ilość ECTS przypisaną do danego pola. Można również zastąpić aktualnego posiadacza pola - kosztuje to tyle, ile wynosi aktualna wartość pola, powiększona o 100\%. Uwaga - nowy gracza zapisany na przedmiot zaczyna go od początku - musi sam od początku napisać wszystkie prace pisemne.\\ 
+\noindent \textbf{c) pola przedmiotów} - są 22 takie pola, oznaczone kolorowym paskiem wraz z ceną nabycia.\\ \indent Każde takie pole reprezentuje jeden z wykładanych w instytucie przedmiotów. Można zapisać się na niego poprzez oddanie punktów ECTS w ilości przypisanej do danego pola (oczywiście jeśli gracz ma na to środki). Zapisanie gracza na dany przedmiot jest oznaczane kwadratem w kolorze pionka gracza. Aby zaliczyć dany przedmiot, trzeba napisać z niego odpowiednio kartkówkę, kolokwium i egzamin - każda taka operacja kosztuje pewną przypisaną ilość ECTS. Prace pisemne można pisać jedynie na przedmiocie, na który gracz jest zapisany. Przedmiot uznaje się za zaliczony, jeśli gracz napisał z niego egzamin. Uwaga - za jednym razem można wykonać tylko jedną z tych czynności. Jeśli gracz stanie na przedmiocie, na który zapisał się już ktoś inny, oddaje tej osobie ilość ECTS przypisaną do danego pola. Można również zastąpić aktualnego posiadacza pola - kosztuje to tyle, ile wynosi aktualna wartość pola, powiększona o 100\%. Uwaga - nowy gracza zapisany na przedmiot zaczyna go od początku - musi sam od początku napisać wszystkie prace pisemne.\\ 
 \noindent \textbf{d) mały grzyb} - jest jedno takie pole.\\
 \indent Stanięcie na nim skutkuje utratą 15 punktów ECTS.\\
 \noindent \textbf{e) duży grzyb} - jest jedno takie pole.\\
@@ -70,7 +70,7 @@ Plansza składa się z 36 pól. Wyróżniamy wśród nich:\\
 \noindent \textbf{i) naprawa komputera} - jeśli gracz stanie na tym polu, musi pozostać na nim przez 3 tury, zanim będzie mógł je opuścić. Innym sposobem na opuszczenie tego pola jest oddanie 50 ECTS lub wylosowanie na dwóch kostkach dubletu.\\
 \indent\includegraphics[scale=0.8]{injail.png}\\
 \noindent \textbf{j) praktyki} - są 3 takie pola.\\
-\indent Aby się na nie zapisać, trzeba oddać przypisaną ilość punktów ECTS. Praktyk nie można przejąć od kogoś - kto pierwszy, ten lepszy.\\ 
+\indent Aby się na nie zapisać, trzeba oddać przypisaną ilość punktów ECTS. Praktyk nie można przejąć od kogoś - kto pierwszy, ten lepszy.
 \vspace{10pt}
 
 %\paragraph*{6.Co, jeśli staniemy na polu i nie stać na na opłacenie akcji związanej z nim?}
